--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/packages.config
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="4.0.0" targetFramework="net461" />
+  <package id="Bootswatch" version="4.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
@@ -22,7 +23,7 @@
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="NUnit.Console" version="3.8.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
