--- a/TumorTaskforce_Webapp_1/UnitTestProject1/packages.config
+++ b/TumorTaskforce_Webapp_1/UnitTestProject1/packages.config
@@ -7,4 +7,8 @@
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.19.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.10.0" targetFramework="net461" />
 </packages>
