--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -422,6 +422,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <None Include="Properties\PublishProfiles\tumor1 - Web Deploy.pubxml" />
+    <Content Include="Images\white_logo_color_background.png" />
     <Content Include="Images\white_logo_transparent.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
